# debian-massif-visualizer

./: CHANGELOG.0.3  CMakeLists.txt  massif-visualizer_0.3.orig.tar.bz2.delta  massif-visualizer_0.3.orig.tar.bz2.id
debian/: changelog  control  copyright  install  manpages  massif-visualizer.rst  rules  watch
debian/patches/: datamodeltest-no-x-needed.diff  dont-install-internal-static-libs.diff  fix-licensing.diff  fix_double_qreal_mismatch  series  static-link-to-kdchart.diff
po/: CMakeLists.txt
po/ca/: massif-visualizer.po
po/da/: massif-visualizer.po
po/el/: massif-visualizer.po
po/en_GB/: massif-visualizer.po
po/es/: massif-visualizer.po
po/et/: massif-visualizer.po
po/fi/: massif-visualizer.po
po/fr/: massif-visualizer.po
po/it/: massif-visualizer.po
po/nb/: massif-visualizer.po
po/nds/: massif-visualizer.po
po/nl/: massif-visualizer.po
po/pl/: massif-visualizer.po
po/pt/: massif-visualizer.po
po/pt_BR/: massif-visualizer.po
po/sv/: massif-visualizer.po
po/uk/: massif-visualizer.po
po/zh_TW/: massif-visualizer.po
